welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
      avance()
            ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
    else {gauche()}
                ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
  else{gauche()}
             ^